--- a/app/views/auth/login.ejs
+++ b/app/views/auth/login.ejs
@@ -5,24 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng nhập</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
-    <div class="login-form">
-        <h1>Đăng nhập hệ thống</h1>
-        <form action="/login" method="POST">
-            <input type="text" name="email" placeholder="Email" 
-                <% if (typeof email != "undefined" && email) { %> value="<%= email %>"<% } %>  required>
-            <input type="password" name="password" placeholder="Password" 
-                <% if (typeof password != "undefined" && password) { %> value="<%= password %>"<% } %> required>
+    <div class="page">
+        <div class="infor">
+            <div class="Mname">Hoàng Việt Anh - AT150203</div>
+        </div>
+        <div class="login-form">
+            <div class="left">
+                <h1>Sign in</h1>
+                <div class="note">Tôi biết mọi người có thể không đọc nhưng tôi cứ thích viết vào cho đẹp đấy lêu lêu..<br>-----------------------------------</div>
+            </div>
             
-            <a href="/register" class="regist">Đăng ký</a> <a href="/password/reset" class="forgotpass">Quên mật khẩu</a>
-            
-            <% if (typeof conflictError != "undefined" && conflictError) { %>
-                <div class="text-danger text-left  mb-3"><%= conflictError %></div>
-            <% } %>
-            <input type="submit" value="Đăng nhập">
-        </form>
+            <div class="right">
+                <div class="form">
+                    <form action="/login" method="POST">
+                        <input type="text" name="email" placeholder="Email" 
+                            <% if (typeof email != "undefined" && email) { %> value="<%= email %>"<% } %>  required>
+                        <input type="password" name="password" placeholder="Password" 
+                            <% if (typeof password != "undefined" && password) { %> value="<%= password %>"<% } %> required>
+                        
+                        <div class="change">
+                            <a href="/register" class="regist">Đăng ký</a> <a href="/password/reset" class="forgotpass">Quên mật khẩu</a>
+                        </div>
+                        
+                        
+                        <% if (typeof conflictError != "undefined" && conflictError) { %>
+                            <div class="text-danger"><%= conflictError %></div>
+                        <% } %>
+                        <input type="submit" value="Đăng nhập">
+                    </form>
+                </div>          
+            </div>     
+        </div>
     </div>
+    
 </body>
 </html>
