--- a/app/views/auth/register.ejs
+++ b/app/views/auth/register.ejs
@@ -4,35 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register Form Tutorial</title>
-	<link rel="stylesheet" href="/css/main.css">
+    <title>Đăng ký</title>
+	<link rel="stylesheet" href="/css/register.css">
 </head>
 <body>
-    <div class="login-form">
-        <h1>Register Form</h1>
-        <form action="/register" method="POST">
-			<input type="text" name="username" placeholder="username" 
-                <% if (typeof username != "undefined" && username) { %> value="<%= username %>"<% } %> required>
-            <input type="text" name="name" placeholder="name" 
-                <% if (typeof name != "undefined" && name) { %> value="<%= name %>"<% } %> required>
-            <input type="text" name="email" placeholder="Email" 
-                <% if (typeof email != "undefined" && email) { %> value="<%= email %>"<% } %>  required>
-            <input type="password" name="password" placeholder="Mật khẩu" 
-                <% if (typeof password != "undefined" && password) { %> value="<%= password %>"<% } %> required>
-            <input type="password" name="passwordretype" placeholder="Nhập lại mật khẩu" 
-                <% if (typeof passwordretype != "undefined" && passwordretype) { %> value="<%= passwordretype %>"<% } %> required>    
+    <div class="page">
+        <div class="return">
 
-            <input type="text" name="phone" placeholder="Điện thoại" 
-                <% if (typeof phone != "undefined" && phone) { %> value="<%= phone %>"<% } %>  required>
+        </div>
+        <div class="login-form">
+            <div class="left">
+                <h1>Sign up</h1>
+                <div class="note">Nhập thông tin vào biểu mẫu <br>-----------------------------------</div>
+            </div>
+            <div class="right">
+                <div class="form">
+                    <form action="/register" method="POST">
+                        <div class="header">Thông tin</div>
+                        <input type="text" name="username" placeholder="Username" 
+                            <% if (typeof username != "undefined" && username) { %> value="<%= username %>"<% } %> required>
+                        <input type="text" name="name" placeholder="Tên" 
+                            <% if (typeof name != "undefined" && name) { %> value="<%= name %>"<% } %> required>
+                        <input type="text" name="email" placeholder="Email" 
+                            <% if (typeof email != "undefined" && email) { %> value="<%= email %>"<% } %>  required>
+                        <input type="password" name="password" placeholder="Mật khẩu" 
+                            <% if (typeof password != "undefined" && password) { %> value="<%= password %>"<% } %> required>
+                        <input type="password" name="passwordretype" placeholder="Nhập lại mật khẩu" 
+                            <% if (typeof passwordretype != "undefined" && passwordretype) { %> value="<%= passwordretype %>"<% } %> required>    
             
-            <input type="text" name="address" placeholder="Địa chỉ" 
-                <% if (typeof address != "undefined" && address) { %> value="<%= address %>"<% } %>  required>
+                        <input type="text" name="phone" placeholder="Điện thoại" 
+                            <% if (typeof phone != "undefined" && phone) { %> value="<%= phone %>"<% } %>  required>
+                        
+                        <input type="text" name="address" placeholder="Địa chỉ" 
+                            <% if (typeof address != "undefined" && address) { %> value="<%= address %>"<% } %>  required>
+                        
+                        <% if (typeof conflictError != "undefined" && conflictError) { %>
+                            <div class="text-danger"><%= conflictError %></div>
+                        <% } %>
+                        <input type="submit">
+                    </form>
+                </div>
+
+            </div>
             
-            <% if (typeof conflictError != "undefined" && conflictError) { %>
-                <div class="text-danger text-left  mb-3"><%= conflictError %></div>
-            <% } %>
-            <input type="submit">
-        </form>
+        </div>
     </div>
+    
 </body>
 </html>
