--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -5,10 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="/css/home.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body>
-    Hello <%= user.name %>
-    <a href="/password/changepass">Đổi mật khẩu</a>
-    <a href="/logout">Đăng xuất</a>
+    <div class="page">
+        <div class="header">
+            <div class="left">
+                Đây là LOGO
+            </div>
+
+            <div class ="navbar">
+                <ul>
+                <% user.MenuBarItem.forEach( item => { %>
+                    <li>
+                        <a href="<%= item.link %>"> <%= item.label%> </a>
+                    </li>    
+
+                <% }) %>
+                </ul>
+            </div>
+
+            <div class="right">
+                <h1>
+                    Hello <%= user.name %> <br>
+                    <%= user.roleName %>
+                </h1>
+                <div class="link">
+                    <a style="text-decoration: none" href="/password/changepass">Đổi mật khẩu</a>
+                    <a style="text-decoration: none" href="/logout">Đăng xuất</a>
+                </div>
+
+            </div>
+            
+        </div>
+        <div class="center">
+            
+            
+            
+        </div>
+        <div class="footer">
+
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
 </body>
 </html>
